# MiptStudy_4

./: .gitignore
MyGame/: CMakeLists.txt  MyGame  README  entity.h  main.cpp  makefile  mission.h  sfml-app
MyGame/NotWorking/: Map.tmx  Tiny_Chao_Garden_SonicAdv_3_Tile_Sheet.tsx  level.h  map.tmx  map.xml  tileset.tsx
MyGame/game/: game.cpp  game.h  game_manager.h  menu.h  object.cpp  object.h
MyGame/map/: map.h
MyGame/player/: Enemy.h  player.cpp  player.h
MyGame/view/: view.h
wf/: dictionary.c  dictionary.h  gtest.dict.cpp  list.c  list.h  main.c  makefile  reader.c  reader.h  tutorial  wf1  wf2
wfCpp/: Control.cpp  View.cpp  View.h  ai.cpp  ai.h  control.h  game.cpp  game.h  human.cpp  human.h  keypressable.h  logFile.txt  main.cpp  makefile  tui.cpp  tui.h
